@@ -86,7 +86,10 @@ public class AlliedTraitorsBuiltInScenario extends AtBScenario {
         }
 
         addBotForce(
-              new BotForce(getContract(campaign).getAllyBotName(), 2, enemyStart, getSpecialScenarioEnemies().get(0)),
+              new BotForce(getContract(campaign).getAllyBotName(),
+                    2,
+                    enemyStart,
+                    getSpecialScenarioEnemies().getFirst()),
               campaign);
     }
 
