@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2009 - Jay Lawson (jaylawson39 at yahoo.com). All Rights Reserved.
- * Copyright (C) 2009-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2009-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -76,10 +76,10 @@ public class Faction {
     private int[] eraMods;
     private Color color;
     private final String currencyCode = ""; // Currency of the faction, if any
-    private String layeredForceIconBackgroundCategory;
-    private String layeredForceIconBackgroundFilename;
-    private String layeredForceIconLogoCategory;
-    private String layeredForceIconLogoFilename;
+    private String layeredFormationIconBackgroundCategory;
+    private String layeredFormationIconBackgroundFilename;
+    private String layeredFormationIconLogoCategory;
+    private String layeredFormationIconLogoFilename;
     private Set<FactionTag> tags;
     private int start; // Start year (inclusive)
     private int end; // End year (inclusive)
@@ -101,10 +101,10 @@ public class Faction {
         color = Color.LIGHT_GRAY;
         startingPlanet = "Terra";
         eraMods = null;
-        setLayeredForceIconBackgroundCategory("");
-        setLayeredForceIconBackgroundFilename(null);
-        setLayeredForceIconLogoCategory("");
-        setLayeredForceIconLogoFilename(null);
+        setLayeredFormationIconBackgroundCategory("");
+        setLayeredFormationIconBackgroundFilename(null);
+        setLayeredFormationIconLogoCategory("");
+        setLayeredFormationIconLogoFilename(null);
         tags = EnumSet.noneOf(FactionTag.class);
         start = 0;
         end = 9999;
@@ -123,16 +123,16 @@ public class Faction {
         if (faction2.getBackground() != null) {
             Path backgroundPath = Path.of(faction2.getBackground());
             if (backgroundPath.getParent() != null) {
-                layeredForceIconBackgroundCategory = backgroundPath.getParent().toString();
+                layeredFormationIconBackgroundCategory = backgroundPath.getParent().toString();
             }
-            layeredForceIconBackgroundFilename = backgroundPath.getFileName().toString();
+            layeredFormationIconBackgroundFilename = backgroundPath.getFileName().toString();
         }
         if (faction2.getLogo() != null) {
             Path logoPath = Path.of(faction2.getLogo());
             if (logoPath.getParent() != null) {
-                layeredForceIconLogoCategory = logoPath.getParent().toString();
+                layeredFormationIconLogoCategory = logoPath.getParent().toString();
             }
-            layeredForceIconLogoFilename = logoPath.getFileName().toString();
+            layeredFormationIconLogoFilename = logoPath.getFileName().toString();
         }
         alternativeFactionCodes = faction2.getFallBackFactions().toArray(new String[0]);
         nameChanges = faction2.getNameChanges();
@@ -141,8 +141,8 @@ public class Faction {
         }
         List<FactionRecord.DateRange> active = faction2.getYearsActive();
         if (!active.isEmpty()) {
-            start = Objects.requireNonNullElse(active.get(0).start, 0);
-            end = Objects.requireNonNullElse(active.get(active.size() - 1).end, 9999);
+            start = Objects.requireNonNullElse(active.getFirst().start, 0);
+            end = Objects.requireNonNullElse(active.getLast().end, 9999);
         }
         HonorRating preInvasion = faction2.getPreInvasionHonorRating();
         HonorRating postInvasion = faction2.getPostInvasionHonorRating();
@@ -171,6 +171,66 @@ public class Faction {
 
     public @Nullable String[] getAlternativeFactionCodes() {
         return alternativeFactionCodes;
+    }
+
+    /**
+     * Tests whether this faction is institutionally compatible with another faction via the
+     * {@code fallBackFactions} successor/predecessor data already populated in the YAML faction files.
+     *
+     * <p>Used by faction-restricted academy access (and any future eligibility check) for non-FedCom
+     * faction successions: Clan Ghost Bear / Free Rasalhague Republic into Rasalhague Dominion, ComStar
+     * into Word of Blake, and similar mergers/splits. The check is bidirectional — either side's
+     * {@code fallBackFactions} can carry the relationship — because the YAMLs only declare the
+     * successor's predecessors (e.g. {@code RD.fallBackFactions = [CGB, FRR]}), never the inverse.
+     *
+     * <p>Meta-faction codes are excluded as compatibility <em>targets</em>: a real faction is never
+     * considered "compatible" with the abstract meta-faction {@code IS} (or {@code CLAN.IS}, or any
+     * {@code Periphery.*} / {@code CLAN.*} code) just because the real faction's
+     * {@code fallBackFactions} list includes that meta code as a generic data-lookup fallback. Most
+     * playable Inner Sphere factions list {@code IS} as a fallback for the
+     * {@link mekhq.campaign.universe.RandomFactionGenerator} machinery, so without this exclusion
+     * any of them would erroneously test compatible with the abstract IS umbrella.
+     *
+     * <p>The exclusion does <em>not</em> change comparisons between two real factions: LA and FS, for
+     * example, are correctly considered incompatible by this method because neither lists the other's
+     * short code in its fallbacks, regardless of any shared meta entries.
+     *
+     * <p>FedCom-specific era rules (LA seceding 3057, Yvonne reverting to Federated Suns 3067) are
+     * handled separately at the call site; this method intentionally does not look at the date.
+     *
+     * @param other the other faction to test compatibility against
+     *
+     * @return {@code true} if this and {@code other} are the same faction, or if either lists the
+     *       other in its {@code fallBackFactions} (after meta-code exclusion); {@code false} otherwise
+     */
+    public boolean isLineageCompatible(final @Nullable Faction other) {
+        if (other == null) {
+            return false;
+        }
+        if (this.equals(other)) {
+            return true;
+        }
+        if (containsNonMetaCode(this.alternativeFactionCodes, other.shortName)) {
+            return true;
+        }
+        return containsNonMetaCode(other.alternativeFactionCodes, this.shortName);
+    }
+
+    private static boolean containsNonMetaCode(@Nullable String[] codes, String target) {
+        if (codes == null || isMetaFactionCode(target)) {
+            return false;
+        }
+        for (String code : codes) {
+            if (target.equals(code)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean isMetaFactionCode(String code) {
+        return "IS".equals(code) || "CLAN.IS".equals(code)
+                     || code.startsWith("Periphery.") || code.startsWith("CLAN.");
     }
 
     public Color getColor() {
@@ -274,36 +334,37 @@ public class Faction {
         return currencyCode;
     }
 
-    public String getLayeredForceIconBackgroundCategory() {
-        return layeredForceIconBackgroundCategory;
+    public String getLayeredFormationIconBackgroundCategory() {
+        return layeredFormationIconBackgroundCategory;
     }
 
-    public void setLayeredForceIconBackgroundCategory(final String layeredForceIconBackgroundCategory) {
-        this.layeredForceIconBackgroundCategory = layeredForceIconBackgroundCategory;
+    public void setLayeredFormationIconBackgroundCategory(final String layeredFormationIconBackgroundCategory) {
+        this.layeredFormationIconBackgroundCategory = layeredFormationIconBackgroundCategory;
     }
 
-    public @Nullable String getLayeredForceIconBackgroundFilename() {
-        return layeredForceIconBackgroundFilename;
+    public @Nullable String getLayeredFormationIconBackgroundFilename() {
+        return layeredFormationIconBackgroundFilename;
     }
 
-    public void setLayeredForceIconBackgroundFilename(final @Nullable String layeredForceIconBackgroundFilename) {
-        this.layeredForceIconBackgroundFilename = layeredForceIconBackgroundFilename;
+    public void setLayeredFormationIconBackgroundFilename(
+          final @Nullable String layeredFormationIconBackgroundFilename) {
+        this.layeredFormationIconBackgroundFilename = layeredFormationIconBackgroundFilename;
     }
 
-    public String getLayeredForceIconLogoCategory() {
-        return layeredForceIconLogoCategory;
+    public String getLayeredFormationIconLogoCategory() {
+        return layeredFormationIconLogoCategory;
     }
 
-    public void setLayeredForceIconLogoCategory(final String layeredForceIconLogoCategory) {
-        this.layeredForceIconLogoCategory = layeredForceIconLogoCategory;
+    public void setLayeredFormationIconLogoCategory(final String layeredFormationIconLogoCategory) {
+        this.layeredFormationIconLogoCategory = layeredFormationIconLogoCategory;
     }
 
-    public @Nullable String getLayeredForceIconLogoFilename() {
-        return layeredForceIconLogoFilename;
+    public @Nullable String getLayeredFormationIconLogoFilename() {
+        return layeredFormationIconLogoFilename;
     }
 
-    public void setLayeredForceIconLogoFilename(final @Nullable String layeredForceIconLogoFilename) {
-        this.layeredForceIconLogoFilename = layeredForceIconLogoFilename;
+    public void setLayeredFormationIconLogoFilename(final @Nullable String layeredFormationIconLogoFilename) {
+        this.layeredFormationIconLogoFilename = layeredFormationIconLogoFilename;
     }
 
     // region Checks
@@ -561,7 +622,7 @@ public class Faction {
      * @return The size of a lance, point or analogous formation type
      */
     public int getFormationBaseSize() {
-        return faction2.getFormationBaseSize();
+        return faction2 != null ? faction2.getFormationBaseSize() : 4;
     }
 
     /**
@@ -576,7 +637,7 @@ public class Faction {
      * @return How many formations form a formation of a higher type (e.g., lances in a company)
      */
     public int getFormationGrouping() {
-        return faction2.getFormationGrouping();
+        return faction2 != null ? faction2.getFormationGrouping() : 3;
     }
 
     /**
@@ -598,7 +659,7 @@ public class Faction {
      * @since 0.50.07
      */
     public String getRankSystemCode() {
-        return faction2.getRankSystem();
+        return faction2 != null ? faction2.getRankSystem() : "SLDF";
     }
 
     /**
@@ -626,7 +687,7 @@ public class Faction {
      * @return {@code true} if the faction performs Batchalls; {@code false} otherwise
      */
     public boolean performsBatchalls() {
-        return faction2.performsBatchalls();
+        return faction2 != null && faction2.performsBatchalls();
     }
 
     /**
@@ -640,7 +701,7 @@ public class Faction {
      * @since 0.50.07
      */
     public boolean isAggregate() {
-        return faction2.isAggregate();
+        return faction2 != null && faction2.isAggregate();
     }
 
     /**
@@ -654,6 +715,6 @@ public class Faction {
      * @since 0.50.07
      */
     public @Nullable FactionLeaderData getLeaderForYear(final int year) {
-        return faction2.getFactionLeaderForYear(year);
+        return faction2 != null ? faction2.getFactionLeaderForYear(year) : null;
     }
 }
