@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2021-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -69,10 +69,10 @@ import mekhq.campaign.finances.Loan;
 import mekhq.campaign.finances.Money;
 import mekhq.campaign.finances.enums.FinancialTerm;
 import mekhq.campaign.finances.enums.TransactionType;
-import mekhq.campaign.force.Force;
-import mekhq.campaign.icons.ForcePieceIcon;
-import mekhq.campaign.icons.LayeredForceIcon;
-import mekhq.campaign.icons.enums.LayeredForceIconLayer;
+import mekhq.campaign.force.Formation;
+import mekhq.campaign.icons.FormationPieceIcon;
+import mekhq.campaign.icons.LayeredFormationIcon;
+import mekhq.campaign.icons.enums.LayeredFormationIconLayer;
 import mekhq.campaign.mission.Contract;
 import mekhq.campaign.parts.AmmoStorage;
 import mekhq.campaign.parts.Armor;
@@ -231,7 +231,7 @@ public abstract class AbstractCompanyGenerator {
     private int determineNumberOfCaptains() {
         return getOptions().isGenerateCaptains()
                      ? Math.max((getOptions().getCompanyCount()
-                                       - (getOptions().isGenerateMercenaryCompanyCommandLance() ? 0 : 1)), 0)
+                                 - (getOptions().isGenerateMercenaryCompanyCommandLance() ? 0 : 1)), 0)
                      : 0;
     }
     // endregion Determination Methods
@@ -321,7 +321,7 @@ public abstract class AbstractCompanyGenerator {
                                      .min(personnelSorter)
                                      .orElse(new CompanyGenerationPersonTracker(
                                            campaign.newPerson(PersonnelRole.MEKWARRIOR, getPersonnelGenerator()))));
-            initialTrackers.remove(sortedTrackers.get(0));
+            initialTrackers.remove(sortedTrackers.getFirst());
         }
 
         // Second, Assign the Officers
@@ -392,7 +392,7 @@ public abstract class AbstractCompanyGenerator {
         sortedTrackers.addAll(initialTrackers);
 
         // Then generate the individuals based on their sorted trackers
-        generateCommandingOfficer(campaign, sortedTrackers.get(0), numMekWarriors);
+        generateCommandingOfficer(campaign, sortedTrackers.getFirst(), numMekWarriors);
         generateOfficers(sortedTrackers);
         generateStandardMekWarriors(campaign, sortedTrackers);
 
@@ -909,29 +909,29 @@ public abstract class AbstractCompanyGenerator {
                                                                                .collect(Collectors.toList());
 
         // Sort Command Lance
-        organizeTrackersIntoLance(sortedTrackers, trackers.get(0), standardMekWarriors);
+        organizeTrackersIntoLance(sortedTrackers, trackers.getFirst(), standardMekWarriors);
 
         // If the command lance is part of a company, we sort the rest of that company
         // immediately
         if (!getOptions().isGenerateMercenaryCompanyCommandLance() && (getOptions().getCompanyCount() > 0)) {
             for (int i = 1; i < getOptions().getLancesPerCompany(); i++) {
-                organizeTrackersIntoLance(sortedTrackers, lieutenants.remove(0), standardMekWarriors);
+                organizeTrackersIntoLance(sortedTrackers, lieutenants.removeFirst(), standardMekWarriors);
             }
         }
 
         // Sort into Companies
         while (!captains.isEmpty()) {
             // Assign the Captain's Lance
-            organizeTrackersIntoLance(sortedTrackers, captains.remove(0), standardMekWarriors);
+            organizeTrackersIntoLance(sortedTrackers, captains.removeFirst(), standardMekWarriors);
             // Then assign the other lances
             for (int y = 1; y < getOptions().getLancesPerCompany(); y++) {
-                organizeTrackersIntoLance(sortedTrackers, lieutenants.remove(0), standardMekWarriors);
+                organizeTrackersIntoLance(sortedTrackers, lieutenants.removeFirst(), standardMekWarriors);
             }
         }
 
         // Sort any individual lances
         while (!lieutenants.isEmpty()) {
-            organizeTrackersIntoLance(sortedTrackers, lieutenants.remove(0), standardMekWarriors);
+            organizeTrackersIntoLance(sortedTrackers, lieutenants.removeFirst(), standardMekWarriors);
         }
 
         return sortedTrackers;
@@ -951,7 +951,7 @@ public abstract class AbstractCompanyGenerator {
             standardMekWarriors.clear();
         } else {
             for (int i = 1; (i < getOptions().getLanceSize()) && !standardMekWarriors.isEmpty(); i++) {
-                sortedTrackers.add(standardMekWarriors.remove(0));
+                sortedTrackers.add(standardMekWarriors.removeFirst());
             }
         }
     }
@@ -1140,18 +1140,18 @@ public abstract class AbstractCompanyGenerator {
      */
     private void generateUnit(final Campaign campaign,
           final List<CompanyGenerationPersonTracker> trackers) {
-        final Force originForce = campaign.getForce(0);
+        final Formation originFormation = campaign.getFormation(0);
         final Alphabet[] alphabet = Alphabet.values();
-        final Faction forceIconFaction = getOptions().isUseSpecifiedFactionToGenerateForceIcons()
-                                               ? getOptions().getSpecifiedFaction()
-                                               : campaign.getFaction();
-        ForcePieceIcon background = null;
+        final Faction formationIconFaction = getOptions().isUseSpecifiedFactionToGenerateFormationIcons()
+                                                   ? getOptions().getSpecifiedFaction()
+                                                   : campaign.getFaction();
+        FormationPieceIcon background = null;
 
-        if (getOptions().isGenerateForceIcons()) {
-            if (forceIconFaction.getLayeredForceIconBackgroundFilename() != null) {
-                background = new ForcePieceIcon(LayeredForceIconLayer.BACKGROUND,
-                      forceIconFaction.getLayeredForceIconBackgroundCategory(),
-                      forceIconFaction.getLayeredForceIconBackgroundFilename());
+        if (getOptions().isGenerateFormationIcons()) {
+            if (formationIconFaction.getLayeredFormationIconBackgroundFilename() != null) {
+                background = new FormationPieceIcon(LayeredFormationIconLayer.BACKGROUND,
+                      formationIconFaction.getLayeredFormationIconBackgroundCategory(),
+                      formationIconFaction.getLayeredFormationIconBackgroundFilename());
 
                 // If the faction doesn't have a proper setup, use the default background
                 // instead
@@ -1160,48 +1160,49 @@ public abstract class AbstractCompanyGenerator {
                 }
             }
 
-            // Create the Origin Force Icon
-            if (getOptions().isGenerateOriginNodeForceIcon()) {
-                final LayeredForceIcon layeredForceIcon = new LayeredForceIcon();
+            // Create the Origin Formation Icon
+            if (getOptions().isGenerateOriginNodeFormationIcon()) {
+                final LayeredFormationIcon layeredFormationIcon = new LayeredFormationIcon();
 
                 // Logo / Type
-                if (getOptions().isUseOriginNodeForceIconLogo()
-                          && (forceIconFaction.getLayeredForceIconLogoFilename() != null)) {
-                    final ForcePieceIcon logoIcon = new ForcePieceIcon(LayeredForceIconLayer.LOGO,
-                          forceIconFaction.getLayeredForceIconLogoCategory(),
-                          forceIconFaction.getLayeredForceIconLogoFilename());
+                if (getOptions().isUseOriginNodeFormationIconLogo()
+                          && (formationIconFaction.getLayeredFormationIconLogoFilename() != null)) {
+                    final FormationPieceIcon logoIcon = new FormationPieceIcon(LayeredFormationIconLayer.LOGO,
+                          formationIconFaction.getLayeredFormationIconLogoCategory(),
+                          formationIconFaction.getLayeredFormationIconLogoFilename());
                     if (logoIcon.getBaseImage() != null) {
-                        layeredForceIcon.getPieces().putIfAbsent(LayeredForceIconLayer.LOGO, new ArrayList<>());
-                        layeredForceIcon.getPieces().get(LayeredForceIconLayer.LOGO).add(logoIcon);
+                        layeredFormationIcon.getPieces().putIfAbsent(LayeredFormationIconLayer.LOGO, new ArrayList<>());
+                        layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.LOGO).add(logoIcon);
                     }
                 } else {
-                    layeredForceIcon.getPieces().putIfAbsent(LayeredForceIconLayer.TYPE, new ArrayList<>());
-                    layeredForceIcon.getPieces().get(LayeredForceIconLayer.TYPE)
-                          .add(new ForcePieceIcon(LayeredForceIconLayer.TYPE,
+                    layeredFormationIcon.getPieces().putIfAbsent(LayeredFormationIconLayer.TYPE, new ArrayList<>());
+                    layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.TYPE)
+                          .add(new FormationPieceIcon(LayeredFormationIconLayer.TYPE,
                                 MHQConstants.LAYERED_FORCE_ICON_TYPE_STRAT_OPS_PATH,
                                 MHQConstants.LAYERED_FORCE_ICON_BATTLEMEK_CENTER_FILENAME));
                 }
 
                 // Background
                 if (background != null) {
-                    layeredForceIcon.getPieces().putIfAbsent(LayeredForceIconLayer.BACKGROUND, new ArrayList<>());
-                    layeredForceIcon.getPieces().get(LayeredForceIconLayer.BACKGROUND).add(background.clone());
+                    layeredFormationIcon.getPieces()
+                          .putIfAbsent(LayeredFormationIconLayer.BACKGROUND, new ArrayList<>());
+                    layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.BACKGROUND).add(background.clone());
                 }
 
-                originForce.setForceIcon(layeredForceIcon);
+                originFormation.setFormationIcon(layeredFormationIcon);
             }
         }
 
         // Generate the Mercenary Company Command Lance
         if (getOptions().isGenerateMercenaryCompanyCommandLance()) {
-            final Force commandLance = createLance(campaign, forceIconFaction, originForce, trackers,
+            final Formation commandLance = createLance(campaign, formationIconFaction, originFormation, trackers,
                   campaign.getName() + resources.getString("AbstractCompanyGenerator.CommandLance.text"),
                   background);
-            if (getOptions().isGenerateForceIcons()
-                      && (commandLance.getForceIcon() instanceof LayeredForceIcon icon)) {
-                icon.getPieces().putIfAbsent(LayeredForceIconLayer.ALPHANUMERIC, new ArrayList<>());
-                icon.getPieces().get(LayeredForceIconLayer.ALPHANUMERIC)
-                      .add(new ForcePieceIcon(LayeredForceIconLayer.ALPHANUMERIC,
+            if (getOptions().isGenerateFormationIcons()
+                      && (commandLance.getFormationIcon() instanceof LayeredFormationIcon icon)) {
+                icon.getPieces().putIfAbsent(LayeredFormationIconLayer.ALPHANUMERIC, new ArrayList<>());
+                icon.getPieces().get(LayeredFormationIconLayer.ALPHANUMERIC)
+                      .add(new FormationPieceIcon(LayeredFormationIconLayer.ALPHANUMERIC,
                             MHQConstants.LAYERED_FORCE_ICON_ALPHANUMERIC_BOTTOM_RIGHT_PATH,
                             MHQConstants.LAYERED_FORCE_ICON_ALPHANUMERIC_HQ_FILENAME));
             }
@@ -1209,21 +1210,26 @@ public abstract class AbstractCompanyGenerator {
 
         // Create Companies
         for (int i = 0; i < getOptions().getCompanyCount(); i++) {
-            final Force company = new Force(getOptions().getForceNamingMethod().getValue(alphabet[i])
-                                                  + resources.getString("AbstractCompanyGenerator.Company.text"));
-            campaign.addForce(company, originForce);
+            final Formation company = new Formation(getOptions().getForceNamingMethod().getValue(alphabet[i])
+                                                          +
+                                                          resources.getString("AbstractCompanyGenerator.Company.text"));
+            campaign.addFormation(company, originFormation);
             for (int y = 0; y < getOptions().getLancesPerCompany(); y++) {
-                createLance(campaign, forceIconFaction, company, trackers, alphabet[y], background);
+                createLance(campaign, formationIconFaction, company, trackers, alphabet[y], background);
             }
 
-            if (getOptions().isGenerateForceIcons()) {
-                createLayeredForceIcon(campaign, forceIconFaction, company, false, background);
+            if (getOptions().isGenerateFormationIcons()) {
+                createLayeredFormationIcon(campaign, formationIconFaction, company, false, background);
             }
         }
 
         // Create Individual Lances
         for (int i = 0; i < getOptions().getIndividualLanceCount(); i++) {
-            createLance(campaign, forceIconFaction, originForce, trackers, alphabet[i + getOptions().getCompanyCount()],
+            createLance(campaign,
+                  formationIconFaction,
+                  originFormation,
+                  trackers,
+                  alphabet[i + getOptions().getCompanyCount()],
                   background);
         }
     }
@@ -1231,110 +1237,110 @@ public abstract class AbstractCompanyGenerator {
     /**
      * This creates a lance with a standard name
      *
-     * @param campaign         the campaign to generate the unit within
-     * @param forceIconFaction the faction to create a layered force icon for
-     * @param head             the force to append the new lance to
-     * @param trackers         the list of trackers, properly ordered to be assigned to the lance
-     * @param alphabet         the alphabet value to determine the lance name from
-     * @param background       the background force piece icon, which is null when there's no valid background
+     * @param campaign             the campaign to generate the unit within
+     * @param formationIconFaction the faction to create a layered formation icon for
+     * @param head                 the force to append the new lance to
+     * @param trackers             the list of trackers, properly ordered to be assigned to the lance
+     * @param alphabet             the alphabet value to determine the lance name from
+     * @param background           the background force piece icon, which is null when there's no valid background
      */
-    private void createLance(final Campaign campaign, final Faction forceIconFaction,
-          final Force head, final List<CompanyGenerationPersonTracker> trackers,
-          final Alphabet alphabet, final @Nullable ForcePieceIcon background) {
-        createLance(campaign, forceIconFaction, head, trackers,
+    private void createLance(final Campaign campaign, final Faction formationIconFaction,
+          final Formation head, final List<CompanyGenerationPersonTracker> trackers,
+          final Alphabet alphabet, final @Nullable FormationPieceIcon background) {
+        createLance(campaign, formationIconFaction, head, trackers,
               getOptions().getForceNamingMethod().getValue(alphabet)
                     + resources.getString("AbstractCompanyGenerator.Lance.text"),
               background);
     }
 
     /**
-     * @param campaign         the campaign to generate the unit within
-     * @param forceIconFaction the faction to create a layered force icon for
-     * @param head             the force to append the new lance to
-     * @param trackers         the list of trackers, properly ordered to be assigned to the lance
-     * @param name             the lance's name
-     * @param background       the background force piece icon, which is null when there's no valid background
+     * @param campaign             the campaign to generate the unit within
+     * @param formationIconFaction the faction to create a layered formation icon for
+     * @param head                 the force to append the new lance to
+     * @param trackers             the list of trackers, properly ordered to be assigned to the lance
+     * @param name                 the lance's name
+     * @param background           the background force piece icon, which is null when there's no valid background
      *
      * @return the newly created lance
      */
-    private Force createLance(final Campaign campaign, final Faction forceIconFaction,
-          final Force head, final List<CompanyGenerationPersonTracker> trackers,
-          final String name, final @Nullable ForcePieceIcon background) {
-        final Force lance = new Force(name);
-        campaign.addForce(lance, head);
+    private Formation createLance(final Campaign campaign, final Faction formationIconFaction,
+          final Formation head, final List<CompanyGenerationPersonTracker> trackers,
+          final String name, final @Nullable FormationPieceIcon background) {
+        final Formation lance = new Formation(name);
+        campaign.addFormation(lance, head);
         for (int i = 0; (i < getOptions().getLanceSize()) && !trackers.isEmpty(); i++) {
-            campaign.addUnitToForce(trackers.remove(0).getPerson().getUnit(), lance);
+            campaign.addUnitToFormation(trackers.removeFirst().getPerson().getUnit(), lance);
         }
 
-        if (getOptions().isGenerateForceIcons()) {
-            createLayeredForceIcon(campaign, forceIconFaction, lance, true, background);
+        if (getOptions().isGenerateFormationIcons()) {
+            createLayeredFormationIcon(campaign, formationIconFaction, lance, true, background);
         }
 
         return lance;
     }
 
     /**
-     * This creates a layered force icon for a force
+     * This creates a layered formation icon for a force
      *
-     * @param campaign         the campaign the force is a part of
-     * @param forceIconFaction the faction to create a layered force icon for
-     * @param force            the force to create a layered force icon for
-     * @param isLance          whether the force is a lance or a company
-     * @param background       the background force piece icon, which is null when there's no valid background
+     * @param campaign             the campaign the force is a part of
+     * @param formationIconFaction the faction to create a layered formation icon for
+     * @param formation            the force to create a layered formation icon for
+     * @param isLance              whether the force is a lance or a company
+     * @param background           the background force piece icon, which is null when there's no valid background
      */
-    private void createLayeredForceIcon(final Campaign campaign, final Faction forceIconFaction,
-          final Force force, final boolean isLance,
-          final @Nullable ForcePieceIcon background) {
-        if (MHQStaticDirectoryManager.getForceIcons() == null) {
+    private void createLayeredFormationIcon(final Campaign campaign, final Faction formationIconFaction,
+          final Formation formation, final boolean isLance,
+          final @Nullable FormationPieceIcon background) {
+        if (MHQStaticDirectoryManager.getFormationIcons() == null) {
             return;
         }
 
-        final LayeredForceIcon layeredForceIcon = new LayeredForceIcon();
+        final LayeredFormationIcon layeredFormationIcon = new LayeredFormationIcon();
 
         // Type
         final String filename = String.format("%s.png",
-              EntityWeightClass.getClassName(determineForceWeightClass(campaign, force, isLance)));
+              EntityWeightClass.getClassName(determineForceWeightClass(campaign, formation, isLance)));
         try {
-            layeredForceIcon.getPieces().putIfAbsent(LayeredForceIconLayer.TYPE, new ArrayList<>());
-            if (MHQStaticDirectoryManager.getForceIcons().getItem(
-                  LayeredForceIconLayer.TYPE.getLayerPath() + MHQConstants.LAYERED_FORCE_ICON_TYPE_STRAT_OPS_PATH,
+            layeredFormationIcon.getPieces().putIfAbsent(LayeredFormationIconLayer.TYPE, new ArrayList<>());
+            if (MHQStaticDirectoryManager.getFormationIcons().getItem(
+                  LayeredFormationIconLayer.TYPE.getLayerPath() + MHQConstants.LAYERED_FORCE_ICON_TYPE_STRAT_OPS_PATH,
                   filename) == null) {
-                layeredForceIcon.getPieces().get(LayeredForceIconLayer.TYPE).add(
-                      new ForcePieceIcon(LayeredForceIconLayer.TYPE,
+                layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.TYPE).add(
+                      new FormationPieceIcon(LayeredFormationIconLayer.TYPE,
                             MHQConstants.LAYERED_FORCE_ICON_TYPE_STRAT_OPS_PATH,
                             MHQConstants.LAYERED_FORCE_ICON_BATTLEMEK_CENTER_FILENAME));
             } else {
-                layeredForceIcon.getPieces().get(LayeredForceIconLayer.TYPE).add(
-                      new ForcePieceIcon(LayeredForceIconLayer.TYPE,
+                layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.TYPE).add(
+                      new FormationPieceIcon(LayeredFormationIconLayer.TYPE,
                             MHQConstants.LAYERED_FORCE_ICON_TYPE_STRAT_OPS_PATH,
                             MHQConstants.LAYERED_FORCE_ICON_BATTLEMEK_LEFT_FILENAME));
-                layeredForceIcon.getPieces().get(LayeredForceIconLayer.TYPE).add(
-                      new ForcePieceIcon(LayeredForceIconLayer.TYPE,
+                layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.TYPE).add(
+                      new FormationPieceIcon(LayeredFormationIconLayer.TYPE,
                             MHQConstants.LAYERED_FORCE_ICON_TYPE_STRAT_OPS_PATH, filename));
             }
         } catch (Exception ex) {
-            LOGGER.error("Cannot create a layered force icon, setting {} to the default", force, ex);
-            force.setForceIcon(new LayeredForceIcon());
+            LOGGER.error("Cannot create a layered formation icon, setting {} to the default", formation, ex);
+            formation.setFormationIcon(new LayeredFormationIcon());
             return;
         }
 
         // Formation
-        layeredForceIcon.getPieces().putIfAbsent(LayeredForceIconLayer.FORMATION, new ArrayList<>());
-        if (forceIconFaction.isClan()) {
-            layeredForceIcon.getPieces().get(LayeredForceIconLayer.FORMATION)
-                  .add(new ForcePieceIcon(LayeredForceIconLayer.FORMATION,
+        layeredFormationIcon.getPieces().putIfAbsent(LayeredFormationIconLayer.FORMATION, new ArrayList<>());
+        if (formationIconFaction.isClan()) {
+            layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.FORMATION)
+                  .add(new FormationPieceIcon(LayeredFormationIconLayer.FORMATION,
                         MHQConstants.LAYERED_FORCE_ICON_FORMATION_CLAN_PATH,
                         isLance ? MHQConstants.LAYERED_FORCE_ICON_FORMATION_STAR_FILENAME
                               : MHQConstants.LAYERED_FORCE_ICON_FORMATION_TRINARY_FILENAME));
-        } else if (forceIconFaction.isComStarOrWoB()) {
-            layeredForceIcon.getPieces().get(LayeredForceIconLayer.FORMATION)
-                  .add(new ForcePieceIcon(LayeredForceIconLayer.FORMATION,
+        } else if (formationIconFaction.isComStarOrWoB()) {
+            layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.FORMATION)
+                  .add(new FormationPieceIcon(LayeredFormationIconLayer.FORMATION,
                         MHQConstants.LAYERED_FORCE_ICON_FORMATION_COMSTAR_PATH,
                         isLance ? MHQConstants.LAYERED_FORCE_ICON_FORMATION_LEVEL_II_FILENAME
                               : MHQConstants.LAYERED_FORCE_ICON_FORMATION_LEVEL_III_FILENAME));
         } else {
-            layeredForceIcon.getPieces().get(LayeredForceIconLayer.FORMATION)
-                  .add(new ForcePieceIcon(LayeredForceIconLayer.FORMATION,
+            layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.FORMATION)
+                  .add(new FormationPieceIcon(LayeredFormationIconLayer.FORMATION,
                         MHQConstants.LAYERED_FORCE_ICON_FORMATION_INNER_SPHERE_PATH,
                         isLance ? MHQConstants.LAYERED_FORCE_ICON_FORMATION_LANCE_FILENAME
                               : MHQConstants.LAYERED_FORCE_ICON_FORMATION_COMPANY_FILENAME));
@@ -1342,25 +1348,25 @@ public abstract class AbstractCompanyGenerator {
 
         // Background
         if (background != null) {
-            layeredForceIcon.getPieces().putIfAbsent(LayeredForceIconLayer.BACKGROUND, new ArrayList<>());
-            layeredForceIcon.getPieces().get(LayeredForceIconLayer.BACKGROUND).add(background.clone());
+            layeredFormationIcon.getPieces().putIfAbsent(LayeredFormationIconLayer.BACKGROUND, new ArrayList<>());
+            layeredFormationIcon.getPieces().get(LayeredFormationIconLayer.BACKGROUND).add(background.clone());
         }
 
-        force.setForceIcon(layeredForceIcon);
+        formation.setFormationIcon(layeredFormationIcon);
     }
 
     /**
      * This determines the weight class of a force (lance or company) based on the units within
      *
-     * @param campaign the campaign to determine based on
-     * @param force    the force to determine the weight class for
-     * @param isLance  whether the force is a lance or a company
+     * @param campaign  the campaign to determine based on
+     * @param formation the force to determine the weight class for
+     * @param isLance   whether the force is a lance or a company
      *
      * @return the weight class of the force
      */
-    private int determineForceWeightClass(final Campaign campaign, final Force force,
+    private int determineForceWeightClass(final Campaign campaign, final Formation formation,
           final boolean isLance) {
-        double weight = force.getAllUnits(false).stream().map(campaign::getUnit)
+        double weight = formation.getAllUnits(false).stream().map(campaign::getUnit)
                               .filter(unit -> (unit != null) && (unit.getEntity() != null))
                               .mapToDouble(unit -> unit.getEntity().getWeight()).sum();
         weight = weight * 4.0 / (getOptions().getLanceSize() * (isLance ? 1 : getOptions().getLancesPerCompany()));
@@ -1710,7 +1716,7 @@ public abstract class AbstractCompanyGenerator {
     private Money rollRandomStartingCash() {
         return getOptions().isRandomizeStartingCash()
                      ? Money.of(Math.pow(10, 6))
-                             .multipliedBy(Utilities.dice(getOptions().getRandomStartingCashDiceCount(), 6))
+                       .multipliedBy(Utilities.dice(getOptions().getRandomStartingCashDiceCount(), 6))
                      : Money.zero();
     }
 
@@ -1874,7 +1880,7 @@ public abstract class AbstractCompanyGenerator {
         generateUnit(campaign, sortPersonnelIntoLances(trackers));
 
         // assign appropriate Formation Levels to the forces
-        Force.populateFormationLevelsFromOrigin(campaign);
+        Formation.populateFormationLevelsFromOrigin(campaign);
 
         return units;
     }
