@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2009 Jay Lawson (jaylawson39 at yahoo.com). All rights reserved.
- * Copyright (C) 2013-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2013-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -35,24 +35,17 @@ package mekhq.gui;
 
 import static mekhq.campaign.Campaign.AdministratorSpecialization.COMMAND;
 import static mekhq.campaign.Campaign.AdministratorSpecialization.LOGISTICS;
-import static mekhq.campaign.force.Force.NO_ASSIGNED_SCENARIO;
+import static mekhq.campaign.force.Formation.NO_ASSIGNED_SCENARIO;
 import static mekhq.campaign.market.personnelMarket.enums.PersonnelMarketStyle.PERSONNEL_MARKET_DISABLED;
 import static mekhq.campaign.personnel.skills.SkillType.EXP_REGULAR;
 import static mekhq.campaign.personnel.skills.SkillType.getExperienceLevelName;
+import static mekhq.campaign.universe.Faction.MERCENARY_FACTION_CODE;
 import static mekhq.gui.dialog.nagDialogs.NagController.triggerDailyNags;
 import static mekhq.gui.enums.MHQTabType.COMMAND_CENTER;
 import static mekhq.utilities.MHQInternationalization.getFormattedTextAt;
 import static mekhq.utilities.MHQInternationalization.getText;
 
-import java.awt.BorderLayout;
-import java.awt.Component;
-import java.awt.Cursor;
-import java.awt.Dimension;
-import java.awt.FlowLayout;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Insets;
-import java.awt.Toolkit;
+import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
@@ -63,6 +56,7 @@ import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.List;
 import java.util.stream.IntStream;
 import java.util.zip.GZIPOutputStream;
 import javax.swing.*;
@@ -70,6 +64,7 @@ import javax.swing.UIManager.LookAndFeelInfo;
 import javax.xml.parsers.DocumentBuilder;
 
 import megamek.Version;
+import megamek.client.ui.CopySystemDataAction;
 import megamek.client.generator.RandomUnitGenerator;
 import megamek.client.ui.clientGUI.GUIPreferences;
 import megamek.client.ui.dialogs.UnitLoadingDialog;
@@ -110,8 +105,8 @@ import mekhq.campaign.events.persons.PersonEvent;
 import mekhq.campaign.events.transactions.TransactionEvent;
 import mekhq.campaign.finances.Money;
 import mekhq.campaign.finances.financialInstitutions.FinancialInstitutions;
-import mekhq.campaign.force.Force;
-import mekhq.campaign.icons.StandardForceIcon;
+import mekhq.campaign.force.Formation;
+import mekhq.campaign.icons.StandardFormationIcon;
 import mekhq.campaign.market.contractMarket.AbstractContractMarket;
 import mekhq.campaign.market.personnelMarket.enums.PersonnelMarketStyle;
 import mekhq.campaign.market.unitMarket.AbstractUnitMarket;
@@ -140,6 +135,7 @@ import mekhq.campaign.report.TransportReport;
 import mekhq.campaign.unit.Unit;
 import mekhq.campaign.universe.Faction;
 import mekhq.campaign.universe.NewsItem;
+import mekhq.campaign.universe.Systems;
 import mekhq.campaign.universe.factionStanding.FactionStandingUtilities;
 import mekhq.campaign.universe.factionStanding.GoingRogue;
 import mekhq.campaign.utilities.AutomatedTechAssignments;
@@ -249,7 +245,7 @@ public class CampaignGUI extends JPanel {
 
     private boolean logNagActive = false;
 
-    private transient StandardForceIcon copyForceIcon = null;
+    private transient StandardFormationIcon copyFormationIcon = null;
     // endregion Variable Declarations
 
     // region Constructors
@@ -297,14 +293,14 @@ public class CampaignGUI extends JPanel {
     }
 
     /**
-     * @return the force icon to paste
+     * @return the formation icon to paste
      */
-    public @Nullable StandardForceIcon getCopyForceIcon() {
-        return copyForceIcon;
+    public @Nullable StandardFormationIcon getCopyFormationIcon() {
+        return copyFormationIcon;
     }
 
-    public void setCopyForceIcon(final @Nullable StandardForceIcon copyForceIcon) {
-        this.copyForceIcon = copyForceIcon;
+    public void setCopyFormationIcon(final @Nullable StandardFormationIcon copyFormationIcon) {
+        this.copyFormationIcon = copyFormationIcon;
     }
     // endregion Getters/Setters
 
@@ -401,6 +397,14 @@ public class CampaignGUI extends JPanel {
             }
         });
 
+        // on Mac, override auto-added "Quit MekHQ" behavior to work like other exit variants (ask for save etc)
+        if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.APP_QUIT_HANDLER)) {
+            Desktop.getDesktop().setQuitHandler((e, response) -> {
+                getApplication().exit(true);
+                response.cancelQuit(); // don't remove this
+            });
+        }
+
         CommandCenterTab commandCenter = getCommandCenterTab();
         for (DailyReportType type : DailyReportType.values()) {
             commandCenter.clearDailyReportNag(type.getTabIndex());
@@ -426,8 +430,12 @@ public class CampaignGUI extends JPanel {
      * unique, as they are both accessed through the same GUI page. The following mnemonic keys are being used as of
      * 30-MAR-2020: A, B, C, E, F, H, I, L, M, N, O, P, R, S, T, V, W, /
      * <p>
-     * Note 1: the slash is used for the help, as it is normally the same key as the ? Note 2: the A mnemonic is used
-     * for the Advance Day button
+     * Note 1: the slash is used for the help, as it is normally the same key as the ?
+     * <p>
+     * Note 2: the A mnemonic is used for the Advance Day button
+     * <p>
+     * Note 3: Only essential actions (Save, Load, New) have global Ctrl+key accelerators. All other menu items use
+     * mnemonics only (accessible via keyboard menu navigation) to avoid duplicate accelerator conflicts.
      */
     private void initMenu() {
         // TODO : Implement "Export All" versions for Personnel and Parts
@@ -443,7 +451,7 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem menuLoad = new JMenuItem(resourceMap.getString("menuLoad.text"));
         menuLoad.setMnemonic(KeyEvent.VK_L);
-        menuLoad.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_L, InputEvent.ALT_DOWN_MASK));
+        menuLoad.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_L, InputEvent.CTRL_DOWN_MASK));
         menuLoad.addActionListener(evt -> {
             final File file = FileDialogs.openCampaign(frame).orElse(null);
             if (file == null) {
@@ -466,13 +474,13 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem menuSave = new JMenuItem(resourceMap.getString("menuSave.text"));
         menuSave.setMnemonic(KeyEvent.VK_S);
-        menuSave.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_S, InputEvent.ALT_DOWN_MASK));
+        menuSave.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_S, InputEvent.CTRL_DOWN_MASK));
         menuSave.addActionListener(this::saveCampaign);
         menuFile.add(menuSave);
 
         JMenuItem menuNew = new JMenuItem(resourceMap.getString("menuNew.text"));
         menuNew.setMnemonic(KeyEvent.VK_N);
-        menuNew.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_N, InputEvent.ALT_DOWN_MASK));
+        menuNew.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_N, InputEvent.CTRL_DOWN_MASK));
         menuNew.addActionListener(evt -> handleInAppNewCampaign());
         menuFile.add(menuNew);
 
@@ -484,7 +492,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miImportPerson = new JMenuItem(resourceMap.getString("miImportPerson.text"));
         miImportPerson.setMnemonic(KeyEvent.VK_P);
-        miImportPerson.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
         miImportPerson.addActionListener(evt -> loadPersonFile());
         menuImport.add(miImportPerson);
 
@@ -492,20 +499,17 @@ public class CampaignGUI extends JPanel {
         miImportIndividualRankSystem.setToolTipText(resourceMap.getString("miImportIndividualRankSystem.toolTipText"));
         miImportIndividualRankSystem.setName("miImportIndividualRankSystem");
         miImportIndividualRankSystem.setMnemonic(KeyEvent.VK_I);
-        miImportIndividualRankSystem.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_I, InputEvent.ALT_DOWN_MASK));
         miImportIndividualRankSystem.addActionListener(evt -> getCampaign().setRankSystem(RankSystem.generateIndividualInstanceFromXML(
               FileDialogs.openIndividualRankSystem(getFrame()).orElse(null))));
         menuImport.add(miImportIndividualRankSystem);
 
         JMenuItem miImportParts = new JMenuItem(resourceMap.getString("miImportParts.text"));
         miImportParts.setMnemonic(KeyEvent.VK_A);
-        miImportParts.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_A, InputEvent.ALT_DOWN_MASK));
         miImportParts.addActionListener(evt -> loadPartsFile());
         menuImport.add(miImportParts);
 
         JMenuItem miLoadForces = new JMenuItem(resourceMap.getString("miLoadForces.text"));
         miLoadForces.setMnemonic(KeyEvent.VK_F);
-        miLoadForces.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_F, InputEvent.ALT_DOWN_MASK));
         miLoadForces.addActionListener(evt -> loadListFile(true));
         menuImport.add(miLoadForces);
 
@@ -526,7 +530,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miExportPersonCSV = new JMenuItem(resourceMap.getString("miExportPersonnel.text"));
         miExportPersonCSV.setMnemonic(KeyEvent.VK_P);
-        miExportPersonCSV.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
         miExportPersonCSV.addActionListener(evt -> {
             try {
                 exportPersonnel(FileType.CSV,
@@ -542,7 +545,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miExportUnitCSV = new JMenuItem(resourceMap.getString("miExportUnit.text"));
         miExportUnitCSV.setMnemonic(KeyEvent.VK_U);
-        miExportUnitCSV.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_U, InputEvent.ALT_DOWN_MASK));
         miExportUnitCSV.addActionListener(evt -> {
             try {
                 exportUnits(FileType.CSV,
@@ -560,7 +562,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miExportFinancesCSV = new JMenuItem(resourceMap.getString("miExportFinances.text"));
         miExportFinancesCSV.setMnemonic(KeyEvent.VK_F);
-        miExportFinancesCSV.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_F, InputEvent.ALT_DOWN_MASK));
         miExportFinancesCSV.addActionListener(evt -> {
             try {
                 exportFinances(FileType.CSV,
@@ -588,7 +589,6 @@ public class CampaignGUI extends JPanel {
         JMenuItem miExportRankSystems = new JMenuItem(resourceMap.getString("miExportRankSystems.text"));
         miExportRankSystems.setName("miExportRankSystems");
         miExportRankSystems.setMnemonic(KeyEvent.VK_R);
-        miExportRankSystems.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miExportRankSystems.addActionListener(evt -> Ranks.exportRankSystemsToFile(FileDialogs.saveRankSystems(getFrame())
                                                                                          .orElse(null),
               getCampaign().getRankSystem()));
@@ -597,7 +597,6 @@ public class CampaignGUI extends JPanel {
         JMenuItem miExportIndividualRankSystem = new JMenuItem(resourceMap.getString("miExportIndividualRankSystem.text"));
         miExportIndividualRankSystem.setName("miExportIndividualRankSystem");
         miExportIndividualRankSystem.setMnemonic(KeyEvent.VK_I);
-        miExportIndividualRankSystem.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_I, InputEvent.ALT_DOWN_MASK));
         miExportIndividualRankSystem.addActionListener(evt -> getCampaign().getRankSystem()
                                                                     .writeToFile(FileDialogs.saveIndividualRankSystem(
                                                                           getFrame()).orElse(null)));
@@ -605,7 +604,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miExportPlanetsXML = new JMenuItem(resourceMap.getString("miExportPlanets.text"));
         miExportPlanetsXML.setMnemonic(KeyEvent.VK_P);
-        miExportPlanetsXML.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
         miExportPlanetsXML.addActionListener(evt -> {
             try {
                 exportPlanets(FileType.XML,
@@ -626,7 +624,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miExportCampaignSubset = new JMenuItem(resourceMap.getString("miExportCampaignSubset.text"));
         miExportCampaignSubset.setMnemonic(KeyEvent.VK_S);
-        miExportCampaignSubset.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_S, InputEvent.ALT_DOWN_MASK));
         miExportCampaignSubset.addActionListener(evt -> {
             CampaignExportWizard cew = new CampaignExportWizard(getCampaign());
             cew.display(CampaignExportWizardState.ForceSelection);
@@ -645,14 +642,12 @@ public class CampaignGUI extends JPanel {
         JMenuItem miRefreshUnitCache = new JMenuItem(resourceMap.getString("miRefreshUnitCache.text"));
         miRefreshUnitCache.setName("miRefreshUnitCache");
         miRefreshUnitCache.setMnemonic(KeyEvent.VK_U);
-        miRefreshUnitCache.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_U, InputEvent.ALT_DOWN_MASK));
         miRefreshUnitCache.addActionListener(evt -> MekSummaryCache.refreshUnitData(false));
         menuRefresh.add(miRefreshUnitCache);
 
         JMenuItem miRefreshCamouflage = new JMenuItem(resourceMap.getString("miRefreshCamouflage.text"));
         miRefreshCamouflage.setName("miRefreshCamouflage");
         miRefreshCamouflage.setMnemonic(KeyEvent.VK_C);
-        miRefreshCamouflage.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.ALT_DOWN_MASK));
         miRefreshCamouflage.addActionListener(evt -> {
             MHQStaticDirectoryManager.refreshCamouflageDirectory();
             refreshAllTabs();
@@ -662,27 +657,24 @@ public class CampaignGUI extends JPanel {
         JMenuItem miRefreshPortraits = new JMenuItem(resourceMap.getString("miRefreshPortraits.text"));
         miRefreshPortraits.setName("miRefreshPortraits");
         miRefreshPortraits.setMnemonic(KeyEvent.VK_P);
-        miRefreshPortraits.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
         miRefreshPortraits.addActionListener(evt -> {
             MHQStaticDirectoryManager.refreshPortraitDirectory();
             refreshAllTabs();
         });
         menuRefresh.add(miRefreshPortraits);
 
-        JMenuItem miRefreshForceIcons = new JMenuItem(resourceMap.getString("miRefreshForceIcons.text"));
-        miRefreshForceIcons.setName("miRefreshForceIcons");
-        miRefreshForceIcons.setMnemonic(KeyEvent.VK_F);
-        miRefreshForceIcons.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_F, InputEvent.ALT_DOWN_MASK));
-        miRefreshForceIcons.addActionListener(evt -> {
-            MHQStaticDirectoryManager.refreshForceIcons();
+        JMenuItem miRefreshFormationIcons = new JMenuItem(resourceMap.getString("miRefreshFormationIcons.text"));
+        miRefreshFormationIcons.setName("miRefreshFormationIcons");
+        miRefreshFormationIcons.setMnemonic(KeyEvent.VK_F);
+        miRefreshFormationIcons.addActionListener(evt -> {
+            MHQStaticDirectoryManager.refreshFormationIcons();
             refreshAllTabs();
         });
-        menuRefresh.add(miRefreshForceIcons);
+        menuRefresh.add(miRefreshFormationIcons);
 
         JMenuItem miRefreshAwards = new JMenuItem(resourceMap.getString("miRefreshAwards.text"));
         miRefreshAwards.setName("miRefreshAwards");
         miRefreshAwards.setMnemonic(KeyEvent.VK_A);
-        miRefreshAwards.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_A, InputEvent.ALT_DOWN_MASK));
         miRefreshAwards.addActionListener(evt -> {
             MHQStaticDirectoryManager.refreshAwardIcons();
             refreshAllTabs();
@@ -701,7 +693,6 @@ public class CampaignGUI extends JPanel {
         JMenuItem miRefreshRanks = new JMenuItem(resourceMap.getString("miRefreshRanks.text"));
         miRefreshRanks.setName("miRefreshRanks");
         miRefreshRanks.setMnemonic(KeyEvent.VK_R);
-        miRefreshRanks.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miRefreshRanks.addActionListener(evt -> Ranks.reinitializeRankSystems(getCampaign()));
         menuRefresh.add(miRefreshRanks);
 
@@ -717,7 +708,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem menuOptions = new JMenuItem(resourceMap.getString("menuOptions.text"));
         menuOptions.setMnemonic(KeyEvent.VK_C);
-        menuOptions.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.ALT_DOWN_MASK));
         menuOptions.addActionListener(this::menuOptionsActionPerformed);
         menuFile.add(menuOptions);
 
@@ -725,7 +715,6 @@ public class CampaignGUI extends JPanel {
         miMHQOptions.setToolTipText(resourceMap.getString("miMHQOptions.toolTipText"));
         miMHQOptions.setName("miMHQOptions");
         miMHQOptions.setMnemonic(KeyEvent.VK_H);
-        miMHQOptions.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_H, InputEvent.ALT_DOWN_MASK));
         miMHQOptions.addActionListener(evt -> new MHQOptionsDialog(getFrame()).setVisible(true));
         menuFile.add(miMHQOptions);
 
@@ -733,7 +722,6 @@ public class CampaignGUI extends JPanel {
         miGameOptions.setToolTipText(resourceMap.getString("miGameOptions.toolTipText"));
         miGameOptions.setName("miGameOptions");
         miGameOptions.setMnemonic(KeyEvent.VK_M);
-        miGameOptions.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_M, InputEvent.ALT_DOWN_MASK));
         miGameOptions.addActionListener(evt -> {
             final GameOptionsDialog god = new GameOptionsDialog(getFrame(), getCampaign().getGameOptions(), false);
             god.setEditable(true);
@@ -748,7 +736,6 @@ public class CampaignGUI extends JPanel {
         miMMClientOptions.setToolTipText(resourceMap.getString("miMMClientOptions.toolTipText"));
         miMMClientOptions.setName("miMMClientOptions");
         miMMClientOptions.setMnemonic(KeyEvent.VK_O);
-        miMMClientOptions.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_O, InputEvent.ALT_DOWN_MASK));
         miMMClientOptions.addActionListener(evt -> new CommonSettingsDialog(frame, null).setVisible(true));
         menuFile.add(miMMClientOptions);
 
@@ -759,7 +746,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem menuExitItem = new JMenuItem(resourceMap.getString("menuExit.text"));
         menuExitItem.setMnemonic(KeyEvent.VK_E);
-        menuExitItem.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_E, InputEvent.ALT_DOWN_MASK));
         menuExitItem.addActionListener(evt -> getApplication().exit(true));
         menuFile.add(menuExitItem);
 
@@ -774,28 +760,24 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miPersonnelMarket = new JMenuItem(resourceMap.getString("miPersonnelMarket.text"));
         miPersonnelMarket.setMnemonic(KeyEvent.VK_P);
-        miPersonnelMarket.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
         miPersonnelMarket.addActionListener(evt -> hirePersonMarket());
         miPersonnelMarket.setVisible(!getCampaign().getPersonnelMarket().isNone());
         menuMarket.add(miPersonnelMarket);
 
         JMenuItem miContractMarket = new JMenuItem(resourceMap.getString("miContractMarket.text"));
         miContractMarket.setMnemonic(KeyEvent.VK_C);
-        miContractMarket.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.ALT_DOWN_MASK));
         miContractMarket.addActionListener(evt -> showContractMarket());
-        miContractMarket.setVisible(getCampaign().getCampaignOptions().isUseAtB());
+        miContractMarket.setVisible(getCampaign().getCampaignOptions().isUseStratCon());
         menuMarket.add(miContractMarket);
 
         JMenuItem miUnitMarket = new JMenuItem(resourceMap.getString("miUnitMarket.text"));
         miUnitMarket.setMnemonic(KeyEvent.VK_U);
-        miUnitMarket.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_U, InputEvent.ALT_DOWN_MASK));
         miUnitMarket.addActionListener(evt -> showUnitMarket());
         miUnitMarket.setVisible(!getCampaign().getUnitMarket().getMethod().isNone());
         menuMarket.add(miUnitMarket);
 
         JMenuItem miPurchaseUnit = new JMenuItem(resourceMap.getString("miPurchaseUnit.text"));
         miPurchaseUnit.setMnemonic(KeyEvent.VK_N);
-        miPurchaseUnit.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_N, InputEvent.ALT_DOWN_MASK));
         miPurchaseUnit.addActionListener(evt -> {
             UnitLoadingDialog unitLoadingDialog = new UnitLoadingDialog(frame);
             if (!MekSummaryCache.getInstance().isInitialized()) {
@@ -811,18 +793,19 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miBuyParts = new JMenuItem(resourceMap.getString("miBuyParts.text"));
         miBuyParts.setMnemonic(KeyEvent.VK_R);
-        miBuyParts.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miBuyParts.addActionListener(evt -> new PartsStoreDialog(true, this).setVisible(true));
         menuMarket.add(miBuyParts);
 
         JMenuItem miHireBulk = new JMenuItem(resourceMap.getString("miHireBulk.text"));
         miHireBulk.setMnemonic(KeyEvent.VK_B);
-        miHireBulk.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_DOWN_MASK));
         miHireBulk.addActionListener(evt -> hireBulkPersonnel());
         menuMarket.add(miHireBulk);
 
         JMenu menuHire = new JMenu(resourceMap.getString("menuHire.text"));
         menuHire.setMnemonic(KeyEvent.VK_H);
+
+        JMenuItem menuHireBlank = new JMenuItem(resourceMap.getString("menuHire.blank"));
+        menuHireBlank.addActionListener(this::addBlankPerson);
 
         JMenu menuHireCombat = new JMenu(resourceMap.getString("menuHire.combat"));
         JMenu menuHireSupport = new JMenu(resourceMap.getString("menuHire.support"));
@@ -838,7 +821,6 @@ public class CampaignGUI extends JPanel {
             JMenuItem miHire = new JMenuItem(role.getLabel(getCampaign().getFaction().isClan()));
             if (role.getMnemonic() != KeyEvent.VK_UNDEFINED) {
                 miHire.setMnemonic(role.getMnemonic());
-                miHire.setAccelerator(KeyStroke.getKeyStroke(role.getMnemonic(), InputEvent.ALT_DOWN_MASK));
             }
             miHire.setToolTipText(role.getDescription(getCampaign().isClanCampaign()));
             miHire.setActionCommand(role.name());
@@ -856,13 +838,12 @@ public class CampaignGUI extends JPanel {
         JMenuItem miHire = new JMenuItem(PersonnelRole.DEPENDENT.getLabel(getCampaign().getFaction().isClan()));
         if (PersonnelRole.DEPENDENT.getMnemonic() != KeyEvent.VK_UNDEFINED) {
             miHire.setMnemonic(PersonnelRole.DEPENDENT.getMnemonic());
-            miHire.setAccelerator(KeyStroke.getKeyStroke(PersonnelRole.DEPENDENT.getMnemonic(),
-                  InputEvent.ALT_DOWN_MASK));
         }
         miHire.setActionCommand(PersonnelRole.DEPENDENT.name());
         miHire.addActionListener(this::hirePerson);
         menuHireCivilian.insert(miHire, 0);
 
+        menuHire.add(menuHireBlank);
         menuHire.add(menuHireCombat);
         menuHire.add(menuHireSupport);
         menuHire.add(menuHireCivilian);
@@ -876,7 +857,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miHireAsTechs = new JMenuItem(resourceMap.getString("miHireAstechs.text"));
         miHireAsTechs.setMnemonic(KeyEvent.VK_H);
-        miHireAsTechs.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_H, InputEvent.ALT_DOWN_MASK));
         miHireAsTechs.addActionListener(evt -> {
             PopupValueChoiceDialog popupValueChoiceDialog = new PopupValueChoiceDialog(getFrame(),
                   true,
@@ -893,7 +873,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miFireAsTechs = new JMenuItem(resourceMap.getString("miFireAstechs.text"));
         miFireAsTechs.setMnemonic(KeyEvent.VK_E);
-        miFireAsTechs.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_E, InputEvent.ALT_DOWN_MASK));
         miFireAsTechs.addActionListener(evt -> {
             PopupValueChoiceDialog popupValueChoiceDialog = new PopupValueChoiceDialog(getFrame(),
                   true,
@@ -910,13 +889,11 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miFullStrengthAsTechs = new JMenuItem(resourceMap.getString("miFullStrengthAstechs.text"));
         miFullStrengthAsTechs.setMnemonic(KeyEvent.VK_B);
-        miFullStrengthAsTechs.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_DOWN_MASK));
         miFullStrengthAsTechs.addActionListener(evt -> getCampaign().resetAsTechPool());
         menuAsTechPool.add(miFullStrengthAsTechs);
 
         JMenuItem miFireAllAsTechs = new JMenuItem(resourceMap.getString("miFireAllAstechs.text"));
         miFireAllAsTechs.setMnemonic(KeyEvent.VK_R);
-        miFireAllAsTechs.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miFireAllAsTechs.addActionListener(evt -> getCampaign().emptyAsTechPool());
         menuAsTechPool.add(miFireAllAsTechs);
         menuMarket.add(menuAsTechPool);
@@ -930,7 +907,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miHireMedics = new JMenuItem(resourceMap.getString("miHireMedics.text"));
         miHireMedics.setMnemonic(KeyEvent.VK_H);
-        miHireMedics.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_H, InputEvent.ALT_DOWN_MASK));
         miHireMedics.addActionListener(evt -> {
             PopupValueChoiceDialog popupValueChoiceDialog = new PopupValueChoiceDialog(getFrame(),
                   true,
@@ -947,7 +923,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miFireMedics = new JMenuItem(resourceMap.getString("miFireMedics.text"));
         miFireMedics.setMnemonic(KeyEvent.VK_E);
-        miFireMedics.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_E, InputEvent.ALT_DOWN_MASK));
         miFireMedics.addActionListener(evt -> {
             PopupValueChoiceDialog popupValueChoiceDialog = new PopupValueChoiceDialog(getFrame(),
                   true,
@@ -964,13 +939,11 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miFullStrengthMedics = new JMenuItem(resourceMap.getString("miFullStrengthMedics.text"));
         miFullStrengthMedics.setMnemonic(KeyEvent.VK_B);
-        miFullStrengthMedics.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_DOWN_MASK));
         miFullStrengthMedics.addActionListener(evt -> getCampaign().resetMedicPool());
         menuMedicPool.add(miFullStrengthMedics);
 
         JMenuItem miFireAllMedics = new JMenuItem(resourceMap.getString("miFireAllMedics.text"));
         miFireAllMedics.setMnemonic(KeyEvent.VK_R);
-        miFireAllMedics.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miFireAllMedics.addActionListener(evt -> getCampaign().emptyMedicPool());
         menuMedicPool.add(miFireAllMedics);
         menuMarket.add(menuMedicPool);
@@ -1092,7 +1065,8 @@ public class CampaignGUI extends JPanel {
                   CampaignGUI.MAX_QUANTITY_SPINNER);
             popupValueChoiceDialog.setVisible(true);
             if (popupValueChoiceDialog.getValue() >= 0) {
-                getCampaign().increaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND, popupValueChoiceDialog.getValue());
+                getCampaign().increaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND,
+                      popupValueChoiceDialog.getValue());
             }
         });
         menuVehicleCrewGroundPool.add(miHireVehicleCrewGround);
@@ -1107,12 +1081,14 @@ public class CampaignGUI extends JPanel {
                   getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND));
             popupValueChoiceDialog.setVisible(true);
             if (popupValueChoiceDialog.getValue() >= 0) {
-                getCampaign().decreaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND, popupValueChoiceDialog.getValue());
+                getCampaign().decreaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND,
+                      popupValueChoiceDialog.getValue());
             }
         });
         menuVehicleCrewGroundPool.add(miFireVehicleCrewGround);
 
-        JMenuItem miFullStrengthVehicleCrewGround = new JMenuItem(resourceMap.getString("miFullStrengthVehicleCrewGround.text"));
+        JMenuItem miFullStrengthVehicleCrewGround = new JMenuItem(resourceMap.getString(
+              "miFullStrengthVehicleCrewGround.text"));
         miFullStrengthVehicleCrewGround.addActionListener(evt -> {
             getCampaign().resetTempCrewPoolForRole(PersonnelRole.VEHICLE_CREW_GROUND);
             getCampaign().distributeTempCrewPoolToUnits(PersonnelRole.VEHICLE_CREW_GROUND);
@@ -1120,7 +1096,8 @@ public class CampaignGUI extends JPanel {
         menuVehicleCrewGroundPool.add(miFullStrengthVehicleCrewGround);
 
         JMenuItem miFireAllVehicleCrewGround = new JMenuItem(resourceMap.getString("miFireAllVehicleCrewGround.text"));
-        miFireAllVehicleCrewGround.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND, 0));
+        miFireAllVehicleCrewGround.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND,
+              0));
         menuVehicleCrewGroundPool.add(miFireAllVehicleCrewGround);
         menuMarket.add(menuVehicleCrewGroundPool);
         // endregion Vehicle Crew Ground Pool
@@ -1159,7 +1136,8 @@ public class CampaignGUI extends JPanel {
         });
         menuVehicleCrewVTOLPool.add(miFireVehicleCrewVTOL);
 
-        JMenuItem miFullStrengthVehicleCrewVTOL = new JMenuItem(resourceMap.getString("miFullStrengthVehicleCrewVTOL.text"));
+        JMenuItem miFullStrengthVehicleCrewVTOL = new JMenuItem(resourceMap.getString(
+              "miFullStrengthVehicleCrewVTOL.text"));
         miFullStrengthVehicleCrewVTOL.addActionListener(evt -> {
             getCampaign().resetTempCrewPoolForRole(PersonnelRole.VEHICLE_CREW_VTOL);
             getCampaign().distributeTempCrewPoolToUnits(PersonnelRole.VEHICLE_CREW_VTOL);
@@ -1167,7 +1145,8 @@ public class CampaignGUI extends JPanel {
         menuVehicleCrewVTOLPool.add(miFullStrengthVehicleCrewVTOL);
 
         JMenuItem miFireAllVehicleCrewVTOL = new JMenuItem(resourceMap.getString("miFireAllVehicleCrewVTOL.text"));
-        miFireAllVehicleCrewVTOL.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL, 0));
+        miFireAllVehicleCrewVTOL.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL,
+              0));
         menuVehicleCrewVTOLPool.add(miFireAllVehicleCrewVTOL);
         menuMarket.add(menuVehicleCrewVTOLPool);
         // endregion Vehicle Crew VTOL Pool
@@ -1206,7 +1185,8 @@ public class CampaignGUI extends JPanel {
         });
         menuVehicleCrewNavalPool.add(miFireVehicleCrewNaval);
 
-        JMenuItem miFullStrengthVehicleCrewNaval = new JMenuItem(resourceMap.getString("miFullStrengthVehicleCrewNaval.text"));
+        JMenuItem miFullStrengthVehicleCrewNaval = new JMenuItem(resourceMap.getString(
+              "miFullStrengthVehicleCrewNaval.text"));
         miFullStrengthVehicleCrewNaval.addActionListener(evt -> {
             getCampaign().resetTempCrewPoolForRole(PersonnelRole.VEHICLE_CREW_NAVAL);
             getCampaign().distributeTempCrewPoolToUnits(PersonnelRole.VEHICLE_CREW_NAVAL);
@@ -1214,7 +1194,8 @@ public class CampaignGUI extends JPanel {
         menuVehicleCrewNavalPool.add(miFullStrengthVehicleCrewNaval);
 
         JMenuItem miFireAllVehicleCrewNaval = new JMenuItem(resourceMap.getString("miFireAllVehicleCrewNaval.text"));
-        miFireAllVehicleCrewNaval.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL, 0));
+        miFireAllVehicleCrewNaval.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL,
+              0));
         menuVehicleCrewNavalPool.add(miFireAllVehicleCrewNaval);
         menuMarket.add(menuVehicleCrewNavalPool);
         // endregion Vehicle Crew Naval Pool
@@ -1371,35 +1352,30 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miDragoonsRating = new JMenuItem(resourceMap.getString("miDragoonsRating.text"));
         miDragoonsRating.setMnemonic(KeyEvent.VK_U);
-        miDragoonsRating.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_U, InputEvent.ALT_DOWN_MASK));
         miDragoonsRating.addActionListener(evt -> new ReputationReportDialog(getFrame(), getCampaign()).setVisible(
               true));
         menuReports.add(miDragoonsRating);
 
         JMenuItem miPersonnelReport = new JMenuItem(resourceMap.getString("miPersonnelReport.text"));
         miPersonnelReport.setMnemonic(KeyEvent.VK_P);
-        miPersonnelReport.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
         miPersonnelReport.addActionListener(evt -> new PersonnelReportDialog(getFrame(),
               new PersonnelReport(getCampaign())).setVisible(true));
         menuReports.add(miPersonnelReport);
 
         JMenuItem miHangarBreakdown = new JMenuItem(resourceMap.getString("miHangarBreakdown.text"));
         miHangarBreakdown.setMnemonic(KeyEvent.VK_H);
-        miHangarBreakdown.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_H, InputEvent.ALT_DOWN_MASK));
         miHangarBreakdown.addActionListener(evt -> new HangarReportDialog(getFrame(),
               new HangarReport(getCampaign())).setVisible(true));
         menuReports.add(miHangarBreakdown);
 
         JMenuItem miTransportReport = new JMenuItem(resourceMap.getString("miTransportReport.text"));
         miTransportReport.setMnemonic(KeyEvent.VK_T);
-        miTransportReport.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_T, InputEvent.ALT_DOWN_MASK));
         miTransportReport.addActionListener(evt -> new TransportReportDialog(getFrame(),
               new TransportReport(getCampaign())).setVisible(true));
         menuReports.add(miTransportReport);
 
         JMenuItem miCargoReport = new JMenuItem(resourceMap.getString("miCargoReport.text"));
         miCargoReport.setMnemonic(KeyEvent.VK_C);
-        miCargoReport.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.ALT_DOWN_MASK));
         miCargoReport.addActionListener(evt -> new CargoReportDialog(getFrame(),
               new CargoReport(getCampaign())).setVisible(true));
         menuReports.add(miCargoReport);
@@ -1415,7 +1391,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miHistoricalDailyReportDialog = new JMenuItem(resourceMap.getString("miShowHistoricalReportLog.text"));
         miHistoricalDailyReportDialog.setMnemonic(KeyEvent.VK_H);
-        miHistoricalDailyReportDialog.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_H, InputEvent.ALT_DOWN_MASK));
         miHistoricalDailyReportDialog.addActionListener(evt -> {
             HistoricalDailyReportDialog histDailyReportDialog = new HistoricalDailyReportDialog(getFrame(), this);
             histDailyReportDialog.setModal(true);
@@ -1426,14 +1401,12 @@ public class CampaignGUI extends JPanel {
 
         miRetirementDefectionDialog = new JMenuItem(resourceMap.getString("miRetirementDefectionDialog.text"));
         miRetirementDefectionDialog.setMnemonic(KeyEvent.VK_R);
-        miRetirementDefectionDialog.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miRetirementDefectionDialog.setVisible(getCampaign().getCampaignOptions().isUseRandomRetirement());
         miRetirementDefectionDialog.addActionListener(evt -> showRetirementDefectionDialog());
         menuView.add(miRetirementDefectionDialog);
 
         miAwardEligibilityDialog = new JMenuItem(resourceMap.getString("miAwardEligibilityDialog.text"));
         miAwardEligibilityDialog.setMnemonic(KeyEvent.VK_R);
-        miAwardEligibilityDialog.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, InputEvent.ALT_DOWN_MASK));
         miAwardEligibilityDialog.setVisible(getCampaign().getCampaignOptions().isEnableAutoAwards());
         miAwardEligibilityDialog.addActionListener(evt -> showAwardEligibilityDialog());
         menuView.add(miAwardEligibilityDialog);
@@ -1451,13 +1424,11 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miGMToolsDialog = new JMenuItem(resourceMap.getString("miGMToolsDialog.text"));
         miGMToolsDialog.setMnemonic(KeyEvent.VK_G);
-        miGMToolsDialog.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_G, InputEvent.ALT_DOWN_MASK));
         miGMToolsDialog.addActionListener(evt -> new GMToolsDialog(getFrame(), this, null).setVisible(true));
         menuManage.add(miGMToolsDialog);
 
         JMenuItem miBloodnames = new JMenuItem(resourceMap.getString("miRandomBloodnames.text"));
         miBloodnames.setMnemonic(KeyEvent.VK_B);
-        miBloodnames.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_DOWN_MASK));
         miBloodnames.addActionListener(evt -> {
             for (final Person person : getCampaign().getPersonnel()) {
                 getCampaign().checkBloodnameAdd(person, false);
@@ -1467,13 +1438,11 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miScenarioEditor = new JMenuItem(resourceMap.getString("miScenarioEditor.text"));
         miScenarioEditor.setMnemonic(KeyEvent.VK_S);
-        miScenarioEditor.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_S, InputEvent.ALT_DOWN_MASK));
         miScenarioEditor.addActionListener(evt -> new ScenarioTemplateEditorDialog(getFrame()).setVisible(true));
         menuManage.add(miScenarioEditor);
 
         miCompanyGenerator = new JMenuItem(resourceMap.getString("miCompanyGenerator.text"));
         miCompanyGenerator.setMnemonic(KeyEvent.VK_C);
-        miCompanyGenerator.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.ALT_DOWN_MASK));
         miCompanyGenerator.setVisible(MekHQ.getMHQOptions().getShowCompanyGenerator());
         miCompanyGenerator.addActionListener(evt -> new CompanyGenerationDialog(getFrame(), getCampaign()).setVisible(
               true));
@@ -1481,7 +1450,6 @@ public class CampaignGUI extends JPanel {
 
         JMenuItem miAutoResolveBehaviorEditor = new JMenuItem(resourceMap.getString("miAutoResolveBehaviorSettings.text"));
         miAutoResolveBehaviorEditor.setMnemonic(KeyEvent.VK_T);
-        miAutoResolveBehaviorEditor.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_T, InputEvent.ALT_DOWN_MASK));
         miAutoResolveBehaviorEditor.addActionListener(evt -> {
             var autoResolveBehaviorSettingsDialog = new AutoResolveBehaviorSettingsDialog(getFrame(), getCampaign());
             autoResolveBehaviorSettingsDialog.setVisible(true);
@@ -1508,17 +1476,21 @@ public class CampaignGUI extends JPanel {
         menuHelp.setMnemonic(KeyEvent.VK_SLASH);
         menuHelp.setName("helpMenu");
 
+        menuHelp.addSeparator();
+
+        JMenuItem menuBugReportItem = new JMenuItem(resourceMap.getString("menuReportBug.text"));
+        menuBugReportItem.setName("ReportBug");
+        menuBugReportItem.addActionListener(evt -> new EasyBugReportDialog(getFrame(), getCampaign()));
+        menuHelp.add(menuBugReportItem);
+
+        menuHelp.add(new CopySystemDataAction(MHQConstants.PROJECT_NAME));
+
+        menuHelp.addSeparator();
+
         JMenuItem menuAboutItem = new JMenuItem(resourceMap.getString("menuAbout.text"));
         menuAboutItem.setMnemonic(KeyEvent.VK_A);
-        menuAboutItem.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_A, InputEvent.ALT_DOWN_MASK));
         menuAboutItem.setName("aboutMenuItem");
-        menuAboutItem.addActionListener(evt -> {
-            MekHQAboutBox aboutBox = new MekHQAboutBox(getFrame());
-            aboutBox.setLocationRelativeTo(getFrame());
-            aboutBox.setModal(true);
-            aboutBox.setVisible(true);
-            aboutBox.dispose();
-        });
+        menuAboutItem.addActionListener(evt -> new MekHQAboutDialog(getFrame()).show());
         menuHelp.add(menuAboutItem);
 
         menuBar.add(menuHelp);
@@ -2144,6 +2116,14 @@ public class CampaignGUI extends JPanel {
         }
     }
 
+    private void addBlankPerson(final ActionEvent evt) {
+        Person person = new Person(getCampaign(), MERCENARY_FACTION_CODE);
+        person.setOriginPlanet(Systems.getInstance().getSystemById("Terra").getPrimaryPlanet());
+        person.setPrimaryRoleDirect(PersonnelRole.DEPENDENT);
+
+        getCampaign().recruitPerson(person, true, true);
+    }
+
     private void hirePerson(final ActionEvent evt) {
         final NewRecruitDialog npd = new NewRecruitDialog(this,
               true,
@@ -2205,7 +2185,7 @@ public class CampaignGUI extends JPanel {
         missionTypeDialog.setVisible(true);
 
         if (missionTypeDialog.isContract()) {
-            NewContractDialog newContractDialog = campaignOptions.isUseAtB() ?
+            NewContractDialog newContractDialog = campaignOptions.isUseStratCon() ?
                                                         new NewAtBContractDialog(getFrame(), true, getCampaign()) :
                                                         new NewContractDialog(getFrame(), true, getCampaign());
             newContractDialog.setVisible(true);
@@ -2320,7 +2300,7 @@ public class CampaignGUI extends JPanel {
     private void menuOptionsActionPerformed(final ActionEvent evt) {
         final CampaignOptions oldOptions = getCampaign().getCampaignOptions();
         // We need to handle it like this for now, as the options above get written to currently
-        boolean atb = oldOptions.isUseAtB();
+        boolean atb = oldOptions.isUseStratCon();
         boolean factionIntroDate = oldOptions.isFactionIntroDate();
         final RandomDivorceMethod randomDivorceMethod = oldOptions.getRandomDivorceMethod();
         final RandomMarriageMethod randomMarriageMethod = oldOptions.getRandomMarriageMethod();
@@ -2393,13 +2373,13 @@ public class CampaignGUI extends JPanel {
             getCampaign().setContractMarket(newOptions.getContractMarketMethod().getContractMarket());
         }
 
-        if (atb != newOptions.isUseAtB()) {
-            if (newOptions.isUseAtB()) {
+        if (atb != newOptions.isUseStratCon()) {
+            if (newOptions.isUseStratCon()) {
                 getCampaign().initAtB(false);
                 // refresh lance assignment table
-                MekHQ.triggerEvent(new OrganizationChangedEvent(getCampaign(), getCampaign().getForces()));
+                MekHQ.triggerEvent(new OrganizationChangedEvent(getCampaign(), getCampaign().getFormations()));
             }
-            if (newOptions.isUseAtB()) {
+            if (newOptions.isUseStratCon()) {
                 int loops = 0;
                 while (!RandomUnitGenerator.getInstance().isInitialized()) {
                     try {
@@ -2481,7 +2461,7 @@ public class CampaignGUI extends JPanel {
                                    JOptionPane.PLAIN_MESSAGE,
                                    null,
                                    techList.toArray(),
-                                   techList.get(0));
+                                   techList.getFirst());
 
             if (null == s) {
                 return;
@@ -3291,7 +3271,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVehicleCrewGround.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vehicle Crew (Ground)</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND) + "</html>";
+        String text = "<html><b>Temp Vehicle Crew (Ground)</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND) +
+                            "</html>";
         lblTempVehicleCrewGround.setText(text);
     }
 
@@ -3302,7 +3284,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVehicleCrewVTOL.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vehicle Crew (VTOL)</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL) + "</html>";
+        String text = "<html><b>Temp Vehicle Crew (VTOL)</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL) +
+                            "</html>";
         lblTempVehicleCrewVTOL.setText(text);
     }
 
@@ -3313,7 +3297,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVehicleCrewNaval.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vehicle Crew (Naval)</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL) + "</html>";
+        String text = "<html><b>Temp Vehicle Crew (Naval)</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL) +
+                            "</html>";
         lblTempVehicleCrewNaval.setText(text);
     }
 
@@ -3324,7 +3310,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVesselPilot.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vessel Pilots</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VESSEL_PILOT) + "</html>";
+        String text = "<html><b>Temp Vessel Pilots</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VESSEL_PILOT) +
+                            "</html>";
         lblTempVesselPilot.setText(text);
     }
 
@@ -3335,7 +3323,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVesselGunner.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vessel Gunners</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VESSEL_GUNNER) + "</html>";
+        String text = "<html><b>Temp Vessel Gunners</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VESSEL_GUNNER) +
+                            "</html>";
         lblTempVesselGunner.setText(text);
     }
 
@@ -3346,13 +3336,14 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVesselCrew.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vessel Crew</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VESSEL_CREW) + "</html>";
+        String text = "<html><b>Temp Vessel Crew</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VESSEL_CREW) +
+                            "</html>";
         lblTempVesselCrew.setText(text);
     }
 
     private void refreshPartsAvailability() {
-        if (!getCampaign().getCampaignOptions().isUseAtB() ||
-                  getCampaign().getCampaignOptions().getAcquisitionType() == AcquisitionsType.ANY_TECH) {
+        if (getCampaign().getCampaignOptions().getAcquisitionType() == AcquisitionsType.ANY_TECH) {
             lblPartsAvailabilityRating.setText("");
         } else {
             int partsAvailability = getCampaign().findAtBPartsAvailabilityLevel();
@@ -3388,7 +3379,7 @@ public class CampaignGUI extends JPanel {
     }
 
     public void undeployUnit(Unit u) {
-        Force f = getCampaign().getForce(u.getForceId());
+        Formation f = getCampaign().getFormation(u.getFormationId());
         if (f != null) {
             undeployForce(f, false);
         }
@@ -3398,16 +3389,16 @@ public class CampaignGUI extends JPanel {
         MekHQ.triggerEvent(new DeploymentChangedEvent(u, s));
     }
 
-    public void undeployForce(Force f) {
+    public void undeployForce(Formation f) {
         undeployForce(f, true);
     }
 
-    public void undeployForce(Force f, boolean killSubs) {
+    public void undeployForce(Formation f, boolean killSubs) {
         int sid = f.getScenarioId();
         Scenario scenario = getCampaign().getScenario(sid);
         if (null != scenario) {
             f.clearScenarioIds(getCampaign(), killSubs);
-            scenario.removeForce(f.getId());
+            scenario.removeFormation(f.getId());
             if (killSubs) {
                 for (UUID uid : f.getAllUnits(false)) {
                     Unit u = getCampaign().getUnit(uid);
@@ -3419,15 +3410,15 @@ public class CampaignGUI extends JPanel {
             }
 
             // We have to clear out the parents as well.
-            Force parent = f;
+            Formation parent = f;
             int prevId = f.getId();
-            while ((parent = parent.getParentForce()) != null) {
+            while ((parent = parent.getParentFormation()) != null) {
                 if (parent.getScenarioId() == NO_ASSIGNED_SCENARIO) {
                     break;
                 }
                 parent.clearScenarioIds(getCampaign(), false);
-                scenario.removeForce(parent.getId());
-                for (Force sub : parent.getSubForces()) {
+                scenario.removeFormation(parent.getId());
+                for (Formation sub : parent.getSubFormations()) {
                     if (sub.getId() == prevId) {
                         continue;
                     }
